# memoink

./: .flake8  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: requirements.txt  setup.cfg
backend/djangoapp/: .flake8  db.sqlite3  manage.py
backend/djangoapp/apps/notes/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/djangoapp/apps/notes/migrations/: 0001_initial.py  0002_initial.py  (+1 more)
backend/djangoapp/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/djangoapp/memobackend/: asgi.py  models.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/__tests__/: CategorySidebar.test.tsx  NoteCard.test.tsx  NoteEditor.test.tsx
frontend/__tests__/__snapshots__/: CategorySidebar.test.tsx.snap  NoteCard.test.tsx.snap  NoteEditor.test.tsx.snap
frontend/app/: layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/notes/: page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: category-sidebar.tsx  categorySidebar.tsx  note-card.tsx  note-editor.tsx  noteCard.tsx  noteEditor.tsx  notesPageContent.tsx
frontend/components/ui/: select.tsx
frontend/context/: NotesContext.tsx
frontend/lib/: constants.ts  utils.ts
frontend/services/: api.ts  auth.ts  notes.ts
frontend/types/: note.ts
frontend/utils/: date.ts
(+4 files in other folders)
